--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(rancais-cppExamples CXX)
+project(rancais_cppExamples CXX)
 
 include(../cmake/project-is-top-level.cmake)
 include(../cmake/folders.cmake)
 
 if(PROJECT_IS_TOP_LEVEL)
-  find_package(rancais-cpp REQUIRED)
+  find_package(rancais_cpp REQUIRED)
 endif()
 
 add_custom_target(run-examples)
 
 function(add_example NAME)
   add_executable("${NAME}" "${NAME}.cpp")
-  target_link_libraries("${NAME}" PRIVATE rancais-cpp::rancais-cpp)
+  target_link_libraries("${NAME}" PRIVATE rancais_cpp::rancais_cpp)
   target_compile_features("${NAME}" PRIVATE cxx_std_20)
   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
   add_dependencies("run_${NAME}" "${NAME}")
