--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,25 +1,59 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(rancais-cppTests LANGUAGES CXX)
+project(rancais_cppTests LANGUAGES CXX)
 
 include(../cmake/project-is-top-level.cmake)
 include(../cmake/folders.cmake)
 include(../cmake/windows-set-path.cmake)
 
-# ---- Dependencies ----
+function(add_test_fn TEST_NAME)
+  add_executable("${TEST_NAME}" "source/${TEST_NAME}.cpp")
+  target_link_libraries("${TEST_NAME}" PRIVATE rancais_cpp::rancais_cpp gtest_main)
 
-if(PROJECT_IS_TOP_LEVEL)
-  find_package(rancais-cpp REQUIRED)
-  enable_testing()
+  if (OpenMP_FOUND OR OpenMP_CXX_FOUND)
+    target_link_libraries("${TEST_NAME}" PRIVATE OpenMP::OpenMP_CXX)
+  endif()
+
+  if (CUDAToolkit_FOUND)
+    target_include_directories("${TEST_NAME}" PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
+    target_link_libraries("${TEST_NAME}" PRIVATE CUDA::cudart)
+  endif()
+
+
+  add_test(NAME "${TEST_NAME}" COMMAND $<TARGET_FILE:${TEST_NAME}>)
+  #target_compile_features("${TEST_NAME}" PRIVATE cxx_std_20)
+endfunction()
+
+function(add_bench_fn BENCH_NAME)
+  add_executable("${BENCH_NAME}" "source/${BENCH_NAME}.cpp")
+  target_link_libraries("${BENCH_NAME}" PRIVATE rancais_cpp::rancais_cpp benchmark::benchmark_main)
+
+  if (OpenMP_FOUND OR OpenMP_CXX_FOUND)
+    target_link_libraries("${BENCH_NAME}" PRIVATE OpenMP::OpenMP_CXX)
+  endif()
+
+  if (CUDAToolkit_FOUND)
+    target_include_directories("${BENCH_NAME}" PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
+    target_link_libraries("${BENCH_NAME}" PRIVATE CUDA::cudart)
+  endif()
+
+  if(NOT CMAKE_BUILD_TYPE MATCHES Debug AND NOT CMAKE_BUILD_TYPE MATCHES Coverage)
+    add_test(NAME "${BENCH_NAME}" COMMAND $<TARGET_FILE:${BENCH_NAME}>)
+  elseif()
+    message(STATUS "Disable ${BENCH_NAME}, Performance benchmark test only run on Release/RelWithDebInfo/MinSizeRel")
+  endif()
+  #target_compile_features("${TEST_NAME}" PRIVATE cxx_std_20)
+endfunction()
+
+if(NOT WIN32)
+include(../cmake/lib/gtest.cmake)
+include(../cmake/lib/benchmark.cmake)
+  # Add tests
+  add_test_fn(rancais_cpp_test)
+
+  # Add bench
+  #add_bench_fn(rancais_cpp_test)
 endif()
-
-# ---- Tests ----
-
-add_executable(rancais-cpp_test source/rancais-cpp_test.cpp)
-target_link_libraries(rancais-cpp_test PRIVATE rancais-cpp::rancais-cpp)
-target_compile_features(rancais-cpp_test PRIVATE cxx_std_20)
-
-add_test(NAME rancais-cpp_test COMMAND rancais-cpp_test)
 
 # ---- End-of-file commands ----
 
